<resources>
    <string name="app_name">Enforce</string>
    <string name="action_settings">Ayarlar</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="name">Adınız</string>
    <string name="surname">Soyadınız</string>
    <string name="password">Şifre</string>
    <string name="title_activity_main">Enforce</string>
    <string name="action_contact">Contact</string>
    <string name="bugListTitle">Şikayetler</string>
    <string name="cName">Şikayet</string>
    <string name="cCategory">Şikayetin Kategorisi</string>
    <string name="voteUp">Şikayeti Onayla</string>
    <string name="voteDown">Vote Down</string>
    <string name="title_activity_new_complaint">Yeni Şikayet</string>
    <string name="photoDescription">Fotoğraf</string>
    <string name="adressName">Şikayetin Adresi</string>
    <string name="takePictureButton">Fotoğraf Çek</string>
    <string name="re_takePictureButton">Yeniden Çek</string>
    <string name="etNewComplaint">Şikayetinizi Girin</string>
    <string name="tvCategories">Kategori Seçin</string>
    <string name="loginButton">Giriş Yap</string>
    <string name="tvYouAreNotAllowed">Yeterince yakın olmadığınız için bu şikayeti oylayamazsınız.</string>
    <string name="problem">Şikayetiniz Nedir?</string>
    <string name="sendButton">Gönder</string>
    <string name="newComplaintButton">Yeni Şikayet</string>
    <string name="appNameUppercase">ENFORCE</string>
    <string name="signIn">KAYIT OL</string>
    <string name="likeButton">Şikayeti Onayla</string>
    <string name="dislikeButton">Hatalı Bildiri</string>
    <string name="reporterName">Resporter Name</string>
    <string name="reportDate">Report Date</string>
    <string name="title_activity_bigger_map">Enforce</string>
    <string name="biggerMapSendButton">Yeni Konumu Kaydet</string>
    <string name="biggerMapInfo">İmlece uzun bastıktan sonra sürükleyip bırakabilirsiniz.</string>
    <string name="title_activity_more_comments">Yorumlar</string>
    <string name="clickMapInfo">Saptanan konum hatalıysa, buraya tıklayarak düzeltebilirsiniz</string>
    <string name="facebook_app_id">527748010596076</string>
    <string name="facebook_debug_id">543199292406693</string>
    <string name="facebook_share">Facebook\'ta Paylaş</string>
    <string name="twitter_share">Twitter\'da Paylaş</string>
    <string name="google_plus_share">Google Plus\'da Paylaş</string>
    <string name="dummyNumber">0</string>
    <string name="veya">VEYA</string>
    <string name="share">Paylaş</string>
    <string name="login_logo">Login Logo</string>
    <string name="hint_login_username">E-Posta</string>
    <string name="hint_login_password">Şifre</string>
    <string name="login_sign_in">GİRİŞ YAP</string>
    <string name="bug_list_item_title">Problemin Başlığı</string>
    <string name="bug_list_item_date">Problemin Tarihi</string>
    <string name="bug_list_loading_image">Yükleniyor</string>
    <string name="bug_list_up_image">Uygun</string>
    <string name="bug_list_down_image">Uygun Değil</string>
    <string name="bug_list_comment_image">Yorum</string>
    <string name="bug_list_more_image">Detaylar</string>
    <string name="detail_item_title">Problemin Başlığı</string>
    <string name="detail_item_category">Problemin Türü</string>
    <string name="detail_loading_image">Yükleniyor</string>
    <string name="detail_item_approve_button">YUKARI TAŞI</string>
    <string name="detail_item_report_button">AŞAĞI TAŞI</string>
    <string name="detail_item_user_photo">Kullanıcının Fotoğrafı</string>
    <string name="detail_item_user_name">Kullanıcı Adı</string>
    <string name="detail_item_user_creation_date">Problem Tarihi</string>
    <string name="detail_item_address">Problemin Bulunduğu Konum</string>
    <string name="detail_item_comment">Kullanıcıların Problem Hakkında Yaptığı Yorumlar</string>
    <string name="detail_item_comment_user">Yorum Yapan Kullanıcı</string>
    <string name="detail_item_all_commments_button">Tüm Yorumları Görüntüle</string>
    <string name="new_item_title">Problemin Başlığı</string>
    <string name="new_item_take_photo_button">Fotoğraf Çekme Butonu</string>
    <string name="new_item_taken_photo">Kullanıcının Çektiği Fotoğraf</string>
    <string name="new_item_address">Problemin Bulunduğu Konum</string>
    <string name="new_item_send_button">GÖNDER</string>
    <string name="title_hot">GÜNDEM</string>
    <string name="title_new">YENİ</string>
    <string name="title_near">YAKIN</string>
    <string name="title_top">POPÜLER</string>
    <string-array name="title_array">
        <item>Gündem</item>
        <item>Yeni</item>
        <item>Yakın</item>
        <item>Popüler</item>
    </string-array>
    <string-array name="title_of_drawer_menu_items">
        <item>Yeni Şikayet</item>
    </string-array>
    <string name="cat_select">Kategori Seçin</string>
    <string name="cat_dr">Engelli Hakları</string>
    <string name="cat_inf">Altyapı</string>
    <string name="cat_env">Çevre</string>
    <string name="cat_tra">Trafik</string>
    <string name="ma_quit_title">Çıkış</string>
    <string name="ma_quit_msg">Programı kapatmak istiyor musunuz?</string>
    <string name="ma_quit_ok">Evet</string>
    <string name="ma_quit_cancel">Hayır</string>
    <string name="ma_no_location">Konum bilginiz alınamadığı için şikayet bildiremezsiniz.</string>
    <string name="nc_cat_missing_cat">Kategori seçmediniz</string>
    <string name="nc_cat_missing_msg">Lütfen bir kategori seçin.</string>
    <string name="nc_missing_title">Lütfen başlık giriniz</string>
    <string name="nc_cat_missing_ok">Tamam</string>
    <string name="nc_cat_loading">Yükleniyor</string>
    <string name="nc_cat_sending">Şikayetiniz gönderiliyor.</string>
    <string name="nc_compalint_rejected">Üzgünüz fakat şikayetiniz gönderilemedi.</string>
    <string name="nc_accepted">Şikayetiniz kaydedilmiştir, teşekkür ederiz</string>
    <string name="nc_missing_photo">Fotoğraf çekmeden şikayet bildiriminde bulunamazsınız</string>
    <string name="nc_screen_size_doesnt_match">Cihazınızın kamerasına erişemiyoruz</string>
    <string name="nc_camera_is_not_ready">Cihazınızın kamerası şu anda başka bir uygulama tarafından kullanılıyor. Lütfen daha sonra tekrar deneyiniz.</string>
    <string name="comp_sec">%d saniye önce</string>
    <string name="comp_min">%d dakika önce</string>
    <string name="comp_hour">%d saat önce</string>
    <string name="comp_day">%d gün önce</string>
    <string name="comp_week">%d hafta önce</string>
    <string name="comp_month">%d ay önce</string>
    <string name="comp_meter">%.0f m</string>
    <string name="comp_km">%.0f km</string>
    <string name="bla_hot"></string>
    <string name="bla_new"></string>
    <string name="bla_near"></string>
    <string name="bla_top">%d kez beğenildi</string>
    <string name="title_activity_register_page">RegisterPageActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="da_upvote_msg">Yukarı taşıdığınız problemler daha üst sıralarda görünecektir</string>
    <string name="da_downvote_msg">Aşağı taşıdığınız problemler daha alt sıralarda görünecektir</string>
    <string name="da_dialog_neg">İptal</string>
    <string name="da_dialog_pos">Kabul</string>
    <string name="da_voting_accepted">Oyunuz alınmıştır, teşekkür ederiz.</string>
    <string name="da_already_voted">Bu soruna daha önceden oyunuzu verdiniz</string>
    <string name="da_voting_rejected">Üzgünüz fakat oyunuzu alamıyoruz.</string>
    <string name="da_add_the_first_comment">İlk Yorumu Siz Ekleyin</string>
    <string name="da_already_voted_error">Bu yoruma oy veremezsiniz.</string>
    <string name="da_complaint_deleted">Şikayetiz başarıyla silinmiştir.</string>
    <string name="da_complaint_delete_rejected">Bu şikayeti silmeye yetkili değilsiniz.</string>
    <string name="da_delete_title">Silme</string>
    <string name="da_delete_msg">Bu şikayeti silmek istediğinizden emin misiniz?</string>
    <string name="login_failed_msg">Üzgünüz ama giriş yapamadınız.</string>
    <string name="network_failed_msg">İnternet erişiminizdeki sorun nedeniyle işleminizi tamamlayamadık. Lütfen daha sonra tekrar deneyin.</string>
    <string name="api_changed">Kullandığınız programın versiyonu eski olduğu için işleminizi tamamlayamadık. Lütfen programı güncelledikten sonra tekrar deneyin.</string>
    <string name="no_internet_access_dialog">Üzgünüz ama internet erişiminiz olmadan bu uygulamayı kullanamazsınız.</string>
    <string name="mca_comment_accepted">Yorumunuz kaydedilmiştir, teşekkür ederiz.</string>
    <string name="mca_comment_rejected">Üzgünüz fakat yorumunuzu kaydedemiyoruz.</string>
    <string name="dialog_cancel">Kapat</string>
    <string name="dialog_comment">Yorum</string>
    <string name="dialog_comment_hint">Yorumunuzu giriniz</string>
    <string name="dialog_comment_is_sending">Yorumunuz gönderiliyor</string>
    <string name="dialog_comment_please_wait">Lütfen bekleyiniz</string>
    <string name="dialog_empty_comment">Lütfen yorumunuzu ekleyiniz</string>
    <string name="warning">Bir hata ile karşılaştık, lütfen tekrar deneyiniz</string>
    <string name="login_missing_content" translatable="false">Lütfen bütün alanları doldurunuz.</string>
    <string name="location_failed" translatable="false">Üzgünüz fakat konum bilginize erişemiyoruz</string>
    <string name="reg_failed" translatable="false">Üzgünüz ama kayıt olamadınız</string>
    <string name="login_gps_disabled">Daha hassas bir konum ölçümü için GPS\' inizi açmak ister misiniz?</string>
    <string name="login_yes_openGPS">Evet</string>
    <string name="login_no_closeGPS">Hayır</string>
    <string name="gcm_SENDER_ID">539837845008</string>
    <string name="bugSense_API_KEY">5e2fc2c8</string>
    <string name="google_maps_API_KEY">AIzaSyAoVkLARgnf57iAjp8v7JAmtcpI5T4vK30</string>
    <string name="title_activity_take_photo">TakePhotoActivity</string>
    <string name="imageButtonDescription">ImageButton</string>
    <string name="tp_iptal">İptal</string>
    <string name="tp_geri">Geri</string>
    <string name="abort_new_complaint">Şikayet girme işlemini iptal etmek istiyor musunuz?</string>
    <string name="capturing">Fotoğraf Çekiliyor&#8230;</string>
    <string name="title_activity_list">ListActivity</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="sil">Şikayeti Sil</string>
    <string name="title_activity_bigger_image">BiggerImage</string>
    <string name="title_activity_settings_list">SettingsListActivity</string>
    <string name="title_activity_notifications">Duyurular</string>
    <string name="title_activity_announcement_details">AnnouncementDetailsActivity</string>
    <string name="announcement_list_baslangic_tarihi">Başlangıç Tarihi</string>
    <string name="announcement_list_bitis_tarihi">Bitiş Tarihi</string>
    <string name="announcement_list_il_ilce">İl/İlçe</string>
    <string name="announcement_list_aciklama">Açıklama</string>
    <string name="announcement_list_etkilenecek_bolgeler">Etkilenecek Bölgeler</string>
    <string name="announcement_list_sosyal_medya">Sosyal Medyada Paylaş</string>
    <string name="announcement_list_facebook">Facebook</string>
    <string name="announcement_list_twitter">Twitter</string>
    <string name="announcement_list_google_plus">Google+</string>
</resources>