<menu xmlns:android="http://schemas.android.com/apk/res/android" >


    <item
        android:id="@+id/da_action_delete"
        android:icon="@drawable/ic_action_discard"
        android:showAsAction="ifRoom"
        android:visible="false"
        android:title="@string/sil"/>

    <item
        android:id="@+id/shareButton"
        android:icon="@android:drawable/ic_menu_share"
        android:showAsAction="always"
        android:title="@string/share">
        <menu>
            <item
                android:id="@+id/shareOnFacebook"
                android:icon="@drawable/facebook_action_bar"
                android:showAsAction="ifRoom|withText"
                android:title="@string/facebook_share"/>
            <item
                android:id="@+id/shareOnTwitter"
                android:icon="@drawable/twitter_action_bar"
                android:showAsAction="ifRoom|withText"
                android:title="@string/twitter_share"/>
            <item
                android:id="@+id/shareOnGooglePlus"
                android:icon="@drawable/googleplus_action_bar"
                android:showAsAction="ifRoom|withText"
                android:title="@string/google_plus_share"/>
        </menu>
    </item>

</menu>