<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#DDDDDD"
    android:padding="5dp" >

    <LinearLayout
        android:id="@+id/llAnnouncementDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/tvAnnouncementTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:padding="10dp"
                android:textSize="18sp"
                android:textStyle="bold" />
        </RelativeLayout>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/announcement_list_baslangic_tarihi" />

        <TextView
            android:id="@+id/tvAnnouncementBaslangicTarihi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/announcement_list_bitis_tarihi" />

        <TextView
            android:id="@+id/tvAnnouncementBitisTarihi"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/announcement_list_il_ilce" />

        <TextView
            android:id="@+id/tvAnnouncementIlIlce"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/announcement_list_aciklama" />

        <TextView
            android:id="@+id/tvAnnouncementAciklama"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dp"/>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/announcement_list_etkilenecek_bolgeler" />

        <LinearLayout
            android:id="@+id/llAnnouncementEtkilenecekBolgeler"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="5dp" >
        </LinearLayout>

        <TextView
            style="?android:attr/listSeparatorTextViewStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/announcement_list_sosyal_medya" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp" >

            <Button
                android:id="@+id/bAnnouncementFacebook"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/facebook_24"
                android:padding="5dp"
                android:text="@string/announcement_list_facebook" />

            <Button
                android:id="@+id/bAnnouncementTwitter"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/twitter_24"
                android:padding="5dp"
                android:text="@string/announcement_list_twitter" />

            <Button
                android:id="@+id/bAnnouncementGooglePlus"
                style="?android:attr/buttonBarButtonStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawableLeft="@drawable/google_plus_24"
                android:padding="5dp"
                android:text="@string/announcement_list_google_plus" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>