<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    android:background="#FFFFFF"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tvComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/detail_item_comment"
        android:textColor="#444444"
        android:textSize="12sp" />

    <LinearLayout
        android:id="@+id/newComplaintCommentUserInfoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:background="#FFFFFF"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/ivCommentUserAvatar"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:contentDescription="@string/detail_item_user_photo"
            android:src="@drawable/default_user_photo" />

        <TextView
            android:id="@+id/tvCommentUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="2dp"
            android:text="@string/detail_item_comment_user"
            android:textColor="#444444"
            android:textSize="12sp" />
    </LinearLayout>

</LinearLayout>