<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="#FFFFFF" >
    
	<ImageView android:id="@+id/ivCommentListAvatar"
	    android:layout_width="40dp"
	    android:layout_height="40dp"
	    android:layout_margin="5dp"
	    android:src="@drawable/default_user_photo"
	    android:contentDescription="@string/detail_item_user_photo" />
			    
    <LinearLayout android:id="@+id/commentListInfo"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_margin="5dp"
	    android:background="#FFFFFF"
	    android:orientation="vertical" >
				    
        <TextView
	        android:id="@+id/tvCommentUser"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#444444"
	        android:textSize="12sp"
	        android:layout_marginTop="5dp"
	        android:layout_marginLeft="10dp"
	        android:text="@string/detail_item_user_name" />
			        
        <TextView
	        android:id="@+id/tvCommentListComment"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#444444"
	        android:textSize="12sp"
	        android:layout_marginLeft="10dp"
	        android:text="@string/detail_item_user_creation_date" />
        
        <!-- 
		<TextView
	        android:id="@+id/tvCommentDate"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:textColor="#444444"
	        android:textSize="12sp"
	        android:layout_marginLeft="10dp"
	        android:text="@string/detail_item_user_creation_date" />
         -->
	</LinearLayout>			
</LinearLayout>
