<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".RegisterPageActivity" >

    <EditText
        android:id="@+id/etRegisterName"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/name_surname"
        android:ems="10"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/etRegisterEmail"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegisterName"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/hint_login_username"
        android:inputType="textEmailAddress" >
    </EditText>

    <EditText
        android:id="@+id/etRegisterPassword"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegisterEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="26dp"
        android:ems="10"
        android:hint="@string/hint_login_password"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/bRegisterSend"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etRegisterPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="18dp"
        android:background="@drawable/report_button_style"
        android:text="@string/signIn" />

</RelativeLayout>